@@ -16,7 +16,6 @@ DESIGN
 - decide on final set of real molecules
 
 HIGH
-- add bond dipole to the model
 - clean up canvas layout code in all tabs
 - Jmol: adjust initial orientation of NH3, CH3F, CHF3, CH2F2, CHCl3
 - Jmol: write script to get atom xyz global coordinates after rotating in Jmol viewer
@@ -24,6 +23,8 @@ HIGH
 - Jmol: how to align molecular dipole with E-Field?
 
 MEDIUM
+- delete Bond.deltaElectronegativity
+- rewrite dipole nodes
 - 3 Atoms: molecular dipole model and view
 - 3 Atoms: partial charge model and view for atom B
 - 3 Atoms: align molecular dipole with E-field
